Changes For Deployment

--- a/views/criminal/new.ejs
+++ b/views/criminal/new.ejs
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>pakPOL : New Criminal Record</title>
 
-    <link rel="icon" href="/ICONS/police-handcuffs main favicon.png" type="image/x-icon">
+    <link rel="icon" href="/ICONS/favicon.png" type="image/x-icon">
 
     <!-- bootstrap css -->
     <link rel="stylesheet" href="/css/bootstrap.min.css" />
