--- a/views/login-signup.ejs
+++ b/views/login-signup.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>pakPOL | Login Sign-Up</title>
 
-    <link rel="icon" href="/ICONS/police-handcuffs main favicon.png" type="image/x-icon">
+    <link rel="icon" href="/ICONS/favicon.png" type="image/x-icon">
     
     <link rel="stylesheet" href="/css/home.css">
 
@@ -37,7 +37,7 @@
 <body>
 
     <div class="container">
-        <h1>PakPOL</h1>
+        <h1>pakPOL</h1>
     
         <div id="login-form">
     
