--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,8 +1,8 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="height: 82px; background-color: #ebf5ff !important;">
 
 
-  <a class="navbar-brand" href="/home"><img src="../../ICONS/police-handcuffs main favicon.png" alt="Logo" style="position: relative; left: 2%;  height: 38px; width: 38px;"><p>PakPOL</p></a>
-  
+  <a class="navbar-brand" href="/home"><img src="../../ICONS/logo.png" alt="Logo" style="position: relative; left: 2%; top: 10px; height: 100px; width: 100px;"><p></p></a>
+
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -15,32 +15,32 @@
         <a class="nav-link home-link" href="/home" style="color: rgb(110, 108, 108);"><b>Home</b></a>
       </li>
     </ul>
-    
+
 
     <div class="dropdown">
-      
-      <button class="btn btn-outline-light dropdown-toggle" type="button" id="searchDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        Search
+
+      <button class="btn btn-outline-light dropdown-toggle" type="button" id="searchDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="background-color: #afafaf">
+      Search
       </button>
-      
+
 
       <div class="dropdown-menu dropdown-menu-lg-right" aria-labelledby="searchDropdown">
 
-        
+
         <form class="px-4 py-3" action="/search" method="get">
           <div class="form-group">
-      
+
             <label for="searchName">Search by Name</label>
             <input type="text" class="form-control" id="searchName" name="searchName" placeholder="Enter a name">
-      
+
           </div>
 
 
           <div class="form-group">
-          
+
             <label for="searchId">Search by ID</label>
             <input type="text" class="form-control" id="searchId" name="searchId" placeholder="Enter an ID">
-          
+
           </div>
 
 
@@ -66,7 +66,7 @@
 
       </div>
       
-      <a class="btn btn-outline-light ml-2" href="/logout">Log Out</a>
+      <a class="btn btn-outline-light ml-2" href="/logout" style="background-color: #afafaf">Log Out</a>
     
     </div>
   
