--- a/views/password-reset-success.ejs
+++ b/views/password-reset-success.ejs
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>pakPOL | Password Reset Success</title>
-    <link rel="icon" href="/ICONS/police-handcuffs main favicon.png" type="image/x-icon">
+    <link rel="icon" href="/ICONS/favicon.png" type="image/x-icon">
     <style>
 
         body {
