--- a/views/reset-password.ejs
+++ b/views/reset-password.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>pakPOL | Reset Password</title>
 
-    <link rel="icon" href="/ICONS/police-handcuffs main favicon.png" type="image/x-icon">
+    <link rel="icon" href="/ICONS/favicon.png" type="image/x-icon">
     
     <style>
 
