--- a/views/search.ejs
+++ b/views/search.ejs
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>pakPOL : Search Data</title>
+  <title>pakPOL : Search Results</title>
 
-  <link rel="icon" href="/ICONS/police-handcuffs main favicon.png" type="image/x-icon">
+  <link rel="icon" href="/ICONS/favicon.png" type="image/x-icon">
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="/css/bootstrap.min.css">
