--- a/views/criminal/gallery/explore-section/explore.ejs
+++ b/views/criminal/gallery/explore-section/explore.ejs
@@ -74,7 +74,7 @@
 
     <%- include("../../../partials/navbar-gallery.ejs") %>
 
-    <h3 style="top: 43px; text-align: center; position: relative; left: -1%;"><u>Explore Section of <b><%= foundcriminal.Criminal_Name %></b></u></h3>
+    <h3 style="top: 43px; text-align: center; position: relative; left: -1%;"><u>Files Exploring Section of <b><%= foundcriminal.Criminal_Name %></b></u></h3>
     <div class="container">
 
       <div class="flex-box">
