--- a/views/criminal/index.ejs
+++ b/views/criminal/index.ejs
@@ -28,7 +28,7 @@
       <div class="data">
         <% for(let x of criminal){ %>
 
-        <a href="/criminal/<%= x.id %>"><img src="<%= x.Criminal_Image  %>" alt="" /></a>
+        <a href="/criminal/<%= x.id %>"><img src="<%= x.Criminal_Image_URL %>" alt="" /></a>
         <p style="text-align: center;"><b><%= x.Criminal_Name %></b></p>
 
 
