--- a/views/criminal/new.ejs
+++ b/views/criminal/new.ejs
@@ -165,8 +165,8 @@
           />
         </div>
         
-<!-- 
-        <div class="mb-3">
+         
+        <!-- <div class="mb-3">
           <label for="Criminal_Image" class="form-label">Upload Image</label>
           <input
             type="text"
@@ -187,7 +187,18 @@
           />
         </div>
 
-        
+
+        <div class="mb-3">
+          <label for="Criminal_Image_URL" class="form-label">Upload Image URL (Optional)</label>
+          <input
+            type="text"
+            class="form-control"
+            id="Criminal_Image_URL"
+            name="Criminal_Image_URL"
+          />
+        </div>
+
+
         <button type="submit" class="btn btn-success">Submit</button>
 
       </form>
@@ -207,3 +218,4 @@
 
   </body>
 </html>
+
