--- a/views/criminal/edit.ejs
+++ b/views/criminal/edit.ejs
@@ -30,7 +30,7 @@
       <form class="f" action="/criminal/<%= foundcriminal.id %>?_method=patch" method="post" enctype="multipart/form-data">
 
 
-        <div class="mb-3">
+        <!-- <div class="mb-3">
           <label for="Criminal_Id" class="form-label">Id</label>
           <input
             type="number"
@@ -39,7 +39,7 @@
             name="Criminal_Id"
             value="<%= foundcriminal.Criminal_Id %>"
           />
-        </div>
+        </div> -->
         
   
         <div class="mb-3">
@@ -186,7 +186,7 @@
         </div>
         
 
-        <img src="<%= foundcriminal.Criminal_Image_URL %>" alt="Previous Image">
+        <img src="<%= foundcriminal.Criminal_Image %>" alt="Previous Image">
         
         <p style="text-align: center;"><b>Previous/Old Image</b></p>
         
@@ -197,7 +197,8 @@
             type="file"
             class="form-control"
             id="Criminal_Image"
-            name="Criminal_Image"
+            name="Criminal_Image" 
+            accept="*/*" 
             value="<%= foundcriminal.Criminal_Image %>"
           />
         </div>
@@ -225,9 +226,9 @@
     
     <script src="/js/bootstrap.min.js">  // Get the file input element
       
-      const fileInput = document.getElementById('Criminal_Image');
+      // const fileInput = document.getElementById('Criminal_Image');
   
-      fileInput.value = '<%= foundcriminal.Criminal_Image %>';
+      // fileInput.value = '<%= foundcriminal.Criminal_Image %>';
 
     </script>
     
@@ -242,4 +243,3 @@
      
   </body>
 </html>
-
