Minor Changes in Criminal's Form

--- a/views/criminal/new.ejs
+++ b/views/criminal/new.ejs
@@ -146,12 +146,12 @@
         
         <div class="mb-3">
           <label for="Criminal_StateOfCase" class="form-label">State of Case</label>
-          <input
+          <textarea
             type="text"
             class="form-control"
             id="Criminal_StateOfCase"
-            name="Criminal_StateOfCase"
-          />
+            name="Criminal_StateOfCase">
+          </textarea>
         </div>
         
         
