--- a/views/criminal/edit.ejs
+++ b/views/criminal/edit.ejs
@@ -164,13 +164,13 @@
   
         <div class="mb-3">
           <label for="Criminal_StateOfCase" class="form-label">State of Case</label>
-          <input
+          <textarea
             type="text"
             class="form-control"
             id="Criminal_StateOfCase"
             name="Criminal_StateOfCase"
-            value="<%= foundcriminal.Criminal_StateOfCase %>"
-          />
+            value="<%= foundcriminal.Criminal_StateOfCase %>">
+          </textarea>
         </div>
         
         
