--- a/views/criminal/new.ejs
+++ b/views/criminal/new.ejs
@@ -73,12 +73,12 @@
         
 
         <div class="mb-3">
-          <label for="Criminal_CNIC" class="form-label">CNIC</label>
+          <label for="CNIC" class="form-label">CNIC</label>
           <input
-            type="number"
+            type="text"
             class="form-control"
-            id="Criminal_CNIC"
-            name="Criminal_CNIC"
+            id="CNIC"
+            name="CNIC"
           />
         </div>
 
