--- a/views/criminal/show.ejs
+++ b/views/criminal/show.ejs
@@ -34,11 +34,13 @@
         margin-bottom: 16px;
         text-align: center;
         position: relative;
-        bottom: -20px;
+        bottom: -34px;
       }
 
       .data {
         text-align: center;
+        position: relative;
+        top: 113px;
       }
 
       .data img {
@@ -175,7 +177,7 @@
             
             <p><b>Crime :</b> <%= foundcriminal.Criminal_Crime %></p>
             
-            <p><b>CNIC :</b> <%= foundcriminal.Criminal_CNIC %></p>
+            <p><b>CNIC :</b> <%= foundcriminal.CNIC %></p>
             
             <p><b>Gender :</b> <%= foundcriminal.Criminal_Gender %></p>
             
